# ST

./: .gitignore  .m  AGENTS.md  AI_OPTIMIZATION.md  ARCHITECTURE.md  PROGRAMMATIC_SEO.md  README.md  SECURITY.md  SEO_RULES.md  TESTING.md  add_availability_column.py  add_characteristics_column.py  add_explicit_columns.py  add_image_url_column.py  create_admin.py  fix_tables.py  migrate.py  pyproject.toml  requirements.txt  seed.py  test_db.py
app/: main.py
app/api/v1/: admin.py  auth.py  catalog.py  faq.py  pages.py  (+5 more)
app/core/: __init__.py  config.py  database.py  dependencies.py  security.py
app/models/: faq.py  order.py  page.py  product.py  settings.py  slider.py  user.py
app/repositories/: user.py
app/schemas/: order.py  product.py  settings.py  slider.py  user.py
app/services/: bot_service.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/components/: AnimatedSection.tsx  CountdownTimer.tsx  HeroAnimations.tsx  HeroSlider.tsx  MobileMenu.tsx  OrderForm.tsx  ProductCard.tsx  SearchInput.tsx  UserNav.tsx
frontend/lib/: api.ts  translations.ts
public/: llms.txt
scratch/: add_promo_columns.py  check_db.py  check_faq_db.py  check_settings_db.py  check_slides_db.py  create_faq_table.py  create_pages_table.py  seed_404.py  seed_faqs.py  seed_pages.py  seed_slides.py  test_db_conn.py
scripts/: deploy.ps1  deploy.sh  install.ps1  install.sh  migrate.py  reset_admin.py  seed.py  seed_data.py  setup_admin.py  update.ps1  update.sh
tests/: conftest.py  test_catalog.py
(+22 files in other folders)
